--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -1,50 +1,56 @@
-<!DOCTYPE html>
-<html>
-<head><title><%= title %></title></head>
-<body>
-  <%= nav %>
-  <h1>Add Vehicle</h1>
+<h1>Add Vehicle</h1>
 
-  <% if (errors && errors.length > 0) { %>
-    <ul style="color:red">
-      <% errors.forEach(err => { %>
-        <li><%= err.msg %></li>
-      <% }) %>
-    </ul>
-  <% } %>
+<% if (messages.notice) { %>
+  <div class="alert alert-warning"><%= messages.notice %></div>
+<% } %>
 
-  <form method="POST" action="/inv/add-inventory">
-    <label>Classification:</label>
-    <%= classificationList %><br>
+<% if (messages.success) { %>
+  <div class="alert alert-success"><%= messages.success %></div>
+<% } %>
 
-    <label>Make:</label>
-    <input type="text" name="inv_make" value="<%= sticky.inv_make || '' %>" required><br>
+<% if (errors) { %>
+  <ul style="color:red;">
+    <% errors.forEach(error => { %>
+      <li><%= error %></li>
+    <% }) %>
+  </ul>
+<% } %>
 
-    <label>Model:</label>
-    <input type="text" name="inv_model" value="<%= sticky.inv_model || '' %>" required><br>
+<form action="/inv/add-inventory" method="POST">
+  <label for="classificationList">Classification</label>
+  <%= classificationList %>
 
-    <label>Year:</label>
-    <input type="number" name="inv_year" value="<%= sticky.inv_year || '' %>" required><br>
+  <label for="inv_make">Make</label>
+  <input type="text" name="inv_make" id="inv_make" required
+    value="<%= sticky.inv_make ? sticky.inv_make : '' %>">
 
-    <label>Price:</label>
-    <input type="number" step="0.01" name="inv_price" value="<%= sticky.inv_price || '' %>" required><br>
+  <label for="inv_model">Model</label>
+  <input type="text" name="inv_model" id="inv_model" required
+    value="<%= sticky.inv_model ? sticky.inv_model : '' %>">
 
-    <label>Miles:</label>
-    <input type="number" step="0.1" name="inv_miles" value="<%= sticky.inv_miles || '' %>" required><br>
+  <label for="inv_year">Year</label>
+  <input type="number" name="inv_year" id="inv_year" required
+    value="<%= sticky.inv_year ? sticky.inv_year : '' %>">
 
-    <label>Color:</label>
-    <input type="text" name="inv_color" value="<%= sticky.inv_color || '' %>" required><br>
+  <label for="inv_price">Price</label>
+  <input type="number" name="inv_price" id="inv_price" step="0.01" required
+    value="<%= sticky.inv_price ? sticky.inv_price : '' %>">
 
-    <label>Description:</label>
-    <textarea name="inv_description" required><%= sticky.inv_description || '' %></textarea><br>
+  <label for="inv_miles">Miles</label>
+  <input type="number" name="inv_miles" id="inv_miles" required
+    value="<%= sticky.inv_miles ? sticky.inv_miles : '' %>">
 
-    <label>Image Path:</label>
-    <input type="text" name="inv_image" value="<%= sticky.inv_image || '/images/no-image.png' %>"><br>
+  <label for="inv_color">Color</label>
+  <input type="text" name="inv_color" id="inv_color" required
+    value="<%= sticky.inv_color ? sticky.inv_color : '' %>">
 
-    <label>Thumbnail Path:</label>
-    <input type="text" name="inv_thumbnail" value="<%= sticky.inv_thumbnail || '/images/no-image.png' %>"><br>
+  <label for="inv_image">Image Path</label>
+  <input type="text" name="inv_image" id="inv_image"
+    value="<%= sticky.inv_image ? sticky.inv_image : '/images/no-image.png' %>">
 
-    <button type="submit">Add Vehicle</button>
-  </form>
-</body>
-</html>
+  <label for="inv_thumbnail">Thumbnail Path</label>
+  <input type="text" name="inv_thumbnail" id="inv_thumbnail"
+    value="<%= sticky.inv_thumbnail ? sticky.inv_thumbnail : '/images/no-image-tn.png' %>">
+
+  <button type="submit">Add Vehicle</button>
+</form>
