--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title><%= title %></title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta -->
+  <title><%= title || "Jones Surf Shop Inventory" %></title>
+  <meta name="description" content="<%= description || "Manage surf shop inventory, classifications, and vehicles." %>">
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="/css/styles.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <%- body %>
+  <!-- Main landmark for accessibility -->
+  <header role="banner">
+    <h1>Jones Surf Shop Inventory</h1>
+    <%- include('partials/nav') %> <!-- optional navigation -->
+  </header>
+
+  <main role="main" id="main-content">
+    <%- body %>
+  </main>
+
+  <footer role="contentinfo">
+    <p>&copy; <%= new Date().getFullYear() %> Jones Surf Shop. All rights reserved.</p>
+  </footer>
+
+  <!-- Optional JS -->
+  <script src="/js/main.js"></script>
 </body>
 </html>
-
