--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,11 +1,31 @@
-<%- include('../partials/header') %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Inventory Management</title>
+</head>
+<body>
+  <h1>Inventory Management</h1>
 
-<h1>Account Management</h1>
+  <% if (messages.error.length > 0) { %>
+    <p style="color:red"><%= messages.error %></p>
+  <% } %>
 
-<% if (notice && notice.length > 0) { %>
-  <p class="notice"><%= notice %></p>
-<% } %>
+  <% if (messages.success.length > 0) { %>
+    <p style="color:green"><%= messages.success %></p>
+  <% } %>
 
-<p>You’re logged in.</p>
+  <ul>
+    <li><a href="/inventory/add-classification">Add Classification</a></li>
+    <li><a href="/inventory/add-inventory">Add Inventory Item</a></li>
+  </ul>
 
-<%- include('../partials/footer') %>
+  <h2>Current Inventory</h2>
+  <ul>
+    <% inventory.forEach(item => { %>
+      <li>
+        <a href="/inventory/details/<%= item.id %>"><%= item.name %></a> - <%= item.price %>
+      </li>
+    <% }) %>
+  </ul>
+</body>
+</html>
