--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -5,19 +5,12 @@
 </head>
 <body>
   <h1>Add Classification</h1>
-
-  <% if (errors && errors.length > 0) { %>
-    <ul style="color:red">
-      <% errors.forEach(function(err) { %>
-        <li><%= err %></li>
-      <% }) %>
-    </ul>
+  <% if (messages.error.length > 0) { %>
+    <p style="color:red"><%= messages.error %></p>
   <% } %>
-
-  <form method="POST" action="/inv/add-classification">
-    <label for="classification_name">Classification Name:</label>
-    <input type="text" name="classification_name" id="classification_name" required pattern="[A-Za-z0-9]+">
-    <button type="submit">Add</button>
+  <form action="/inventory/add-classification" method="POST">
+    <label>Classification Name: <input type="text" name="name"></label><br>
+    <button type="submit">Add Classification</button>
   </form>
 </body>
 </html>
