--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -5,47 +5,13 @@
 </head>
 <body>
   <h1>Add Inventory Item</h1>
-
-  <% if (errors && errors.length > 0) { %>
-    <ul style="color:red">
-      <% errors.forEach(function(err) { %>
-        <li><%= err %></li>
-      <% }) %>
-    </ul>
+  <% if (messages.error.length > 0) { %>
+    <p style="color:red"><%= messages.error %></p>
   <% } %>
-
-  <form method="POST" action="/inv/add-inventory">
-    <label>Classification:</label>
-    <%= classificationList %><br>
-
-    <label>Make:</label>
-    <input type="text" name="inv_make" value="<%= formData.inv_make || '' %>" required><br>
-
-    <label>Model:</label>
-    <input type="text" name="inv_model" value="<%= formData.inv_model || '' %>" required><br>
-
-    <label>Year:</label>
-    <input type="number" name="inv_year" value="<%= formData.inv_year || '' %>" required><br>
-
-    <label>Description:</label>
-    <textarea name="inv_description"><%= formData.inv_description || '' %></textarea><br>
-
-    <label>Image Path:</label>
-    <input type="text" name="inv_image" value="<%= formData.inv_image || '/images/no-image.png' %>"><br>
-
-    <label>Thumbnail Path:</label>
-    <input type="text" name="inv_thumbnail" value="<%= formData.inv_thumbnail || '/images/no-image.png' %>"><br>
-
-    <label>Price:</label>
-    <input type="number" step="0.01" name="inv_price" value="<%= formData.inv_price || '' %>"><br>
-
-    <label>Miles:</label>
-    <input type="number" name="inv_miles" value="<%= formData.inv_miles || '' %>"><br>
-
-    <label>Color:</label>
-    <input type="text" name="inv_color" value="<%= formData.inv_color || '' %>"><br>
-
-    <button type="submit">Add Inventory</button>
+  <form action="/inventory/add-inventory" method="POST">
+    <label>Name: <input type="text" name="name"></label><br>
+    <label>Price: <input type="text" name="price"></label><br>
+    <button type="submit">Add Item</button>
   </form>
 </body>
 </html>
